Consider bundle versions when adding JUnit to launch
and remove unnecessary separate attempts to add junit-launcher and
jupiter.engine bundles to the runtime, intending to support
@RunWith(JUnitPlatform.class), because these bundles always are already
added to a runtime.

This change adjusts JUnitLaunchConfigurationDelegate,
to consider bundle versions when adding required JUnit bundles.
E.g. when adding JUnit bundles for a JUnit 5 test, JUnit 5 versions are
added.
This avoids conflicts when both JUnit 5 and JUnit 6 bundles are in the
platform, since they share symbolic names.

Furthermore handle multiple versions of a bundle when searching them in
the host.

Fixes: https://github.com/eclipse-pde/eclipse.pde/issues/2006

Co-authored-by: Hannes Wellmann <wellmann.hannes1@gmx.net>
Co-authored-by: Ed Merks <ed.merks@gmail.com>